Начал писать convertor и упёрся в segfault

--- a/client/Makefile
+++ b/client/Makefile
@@ -15,9 +15,9 @@ lexer: lexer.l
 	flex lexer.l
 
 main: parser lexer graphql_ast.c main.c
-	gcc parser.tab.c lex.yy.c graphql_ast.c ../gen-c_glib/structs_types.c ../gen-c_glib/zgdb_service.c main.c $(THRIFT) -o main
+	gcc parser.tab.c lex.yy.c graphql_ast.c convertor.c ../gen-c_glib/structs_types.c ../gen-c_glib/zgdb_service.c main.c $(THRIFT) -o main
 
 debug: parser_debug lexer graphql_ast.c main.c
-	gcc parser.tab.c lex.yy.c graphql_ast.c ../gen-c_glib/structs_types.c ../gen-c_glib/zgdb_service.c main.c $(THRIFT) -o debug
+	gcc parser.tab.c lex.yy.c graphql_ast.c convertor.c ../gen-c_glib/structs_types.c ../gen-c_glib/zgdb_service.c main.c $(THRIFT) -o debug
 
 .PHONY: all clean parser parser_debug lexer
